--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<p class="text-title-company">Iglesia de Dios Renacer</p>
 				</div>
 				<div class="col">
-					<img src="IDD logo.png.png" alt="Company Logo">
+					<img src="IDD logo.png.png" alt="Company Logo" width="150" height="187.5">
 				</div>
 			</div>
 		</div>
